fixed boolean problem